--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,19 @@
+<!doctype html>
+<html lang="en">
 
-<div class="container-fluid gx-0 position-relative">
-  <header class="w-100"></header>
-  <div class="w-100 p-0 m-0">
-    <div class="bosch-logo-container">
-      <div class="px-sm-3 py-sm-4 px-md-3 py-md-4  px-lg-3 py-lg-3  d-sm-none d-none d-md-block d-lg-block d-xl-block">
-        <img src="../assets/images/bosch_logo.svg" alt="Logo" class="bosch-logo" />
-      </div>
-    </div>
-  </div>
-</div>
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Admin</title>
+</head>
 
+<body>
+  <app-header></app-header>
   <router-outlet></router-outlet>
+  <app-footer></app-footer>
+</body>
+ 
