--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,7 @@
 @import "./assets/css/reset";
 @import "./assets/css/variables";
 @import "../node_modules/ng-pick-datetime/assets/style/picker.min.css";
+@import "./assets/css/main.scss";
 
 .drawflow .drawflow-node {
   display: flex;
@@ -84,8 +85,8 @@
   background: #fff;
 }
 
-html, body {
-  margin: 0;
-  padding: 0;
-  font-size: 1vw;
-}
+// html, body {
+//   margin: 0;
+//   padding: 0;
+//   font-size: 1vw;
+// }
