--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -44,25 +44,5 @@
             </div>
         </div>
     </div>
-    <div class="main-menu">
-        <div class="container-fluid">
-            <ul>
-                <li>
-                    <a href="create-new-project.html">Create New Project</a>
-                </li>
-                <li class="active">
-                    <a href="module-extension.html">Module Extension</a>
-                </li>
-                <li>
-                    <a href="node-configuration.html">Node Configuration</a>
-                </li>
-                <li>
-                    <a href="data-sets.html">Data Sets</a>
-                </li>
-                <li>
-                    <a href="market-place.html">Market Place</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    <app-menu></app-menu>
 </header>
