--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,1 +1,43 @@
-<p>projects works!</p>
+<div class="body-wrap">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <h6 class="fw-bold">Create New Project</h6>
+                <p>
+                    Paragraph text with style text M. Invidunt ut labore et dolore magna aliquy erat, sed diam voluptua. At vero eos et accusam et jus to duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                </p>
+            </div>
+            <div class="col-md-12">
+                <div class="right-content">
+                    <div class="custom-source-box">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="sourse-card">
+                                    <div class="s-card-body">
+                                        <a  [routerLink]="['/createproject']"><i class="boschicon-bosch-ic-square-add" style="font-size: 230px;"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="sourse-card">
+                                    <div class="s-card-body">
+                                        
+                                    </div>
+                                    <div class="s-card-footer">
+                                        <div class="s-card-title">
+                                            <h5 class="m-0">Data Ingestion Hub</h5>
+                                        </div>
+                                        <div>
+                                            <h6>test</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                                                        
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
