Design Project Page

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,41 +1,32 @@
-<div class="body-wrap">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <h6 class="fw-bold">Create New Project</h6>
-                <p>
-                    Paragraph text with style text M. Invidunt ut labore et dolore magna aliquy erat, sed diam voluptua. At vero eos et accusam et jus to duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                </p>
-            </div>
-            <div class="col-md-12">
-                <div class="right-content">
-                    <div class="custom-source-box">
-                        <div class="row">
-                            <div class="col-md-3">
-                                <div class="sourse-card">
-                                    <div class="s-card-body">
-                                        <a  [routerLink]="['/createproject']"><i class="boschicon-bosch-ic-square-add" style="font-size: 230px;"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="sourse-card">
-                                    <div class="s-card-body">
-                                        
-                                    </div>
-                                    <div class="s-card-footer">
-                                        <div class="s-card-title">
-                                            <h5 class="m-0">Data Ingestion Hub</h5>
-                                        </div>
-                                        <div>
-                                            <h6>test</h6>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                                                        
-                        </div>
+<div class="container mt-5">
+    <h2>Create New Project</h2>
+    <p class="text-muted">
+        Paragraph text with style text M. Invidunt ut labore et dolore magna aliquy erat, sed diam voluptua. At vero eos
+        et accusam et jus to duo dolores et ea rebum.
+    </p>
+
+    <div class="row">
+        <!-- Create New Blank Project -->
+        <div class="col-md-3">
+            <div class="card text-center p-4 h-100">
+                <div class="card-body">
+                    <div class="border-dashed p-4 mb-3">
+                        <a [routerLink]="['/createproject']"><i class="bi bi-plus-lg" style="font-size: 2rem;"></i></a>
                     </div>
+                    <h5 class="card-title">Create New Blank Project</h5>
+                </div>
+            </div>
+        </div>
+
+        <!-- Template Cards -->
+        <div class="col-md-3" *ngFor="let template of templates">
+            <div class="card h-100">
+                <div class="card-body text-center">
+                    <div class="mb-3" style="height: 150px; background-color: #f7f7f7;">
+                        <!-- Placeholder for image or content -->
+                    </div>
+                    <h5 class="card-title">Template Name</h5>
+                    <p class="card-text">{{ template.name }}</p>
                 </div>
             </div>
         </div>
