adding other page htmls

--- a/src/app/pages/module-extension/module-extension.component.html
+++ b/src/app/pages/module-extension/module-extension.component.html
@@ -1,1 +1,241 @@
-<p>module-extension works!</p>
+<div class="body-wrap">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <h6 class="fw-bold">Module Extension</h6>
+                <p>
+                    Expand your machine learning project by creating custom modules designed to fit your workflow. Easily set up custom sources, sinks, algorithms, and accumulators to enhance data processing and analysisThis flexible extension allows you to integrate unique functionalities, ensuring your project is equipped to handle specific requirements and maximize performance.
+                </p>
+            </div>
+            <div class="col-md-3">
+                <div class="side-menu">
+                    <ul>
+                        <li class="active">
+                            <a href="#">
+                                <img width="20" src="../../../assets/images/menu-icon1.svg" alt="">
+                                Create your Custom Source
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img width="20" src="../../../assets//menu-icon1.svg" alt="">
+                                Create your Custom Algorithm
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img width="20" src="../../../assets//menu-icon1.svg" alt="">
+                                Create your Custom Sink
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img width="20" src="../../../assets//menu-icon1.svg" alt="">
+                                Create your Custom Accumulator
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="right-content">
+                    <div class="top-right-search">
+                        <div class="page-heading">
+                            Available Custom Sources
+                        </div>
+                        <div class="search-bar">
+                            <input type="text" class="search-input">
+                            <button class="btn-search">
+                                <img width="20" src="../../../assets//search-icon.svg" alt="">
+                            </button>
+                        </div>
+                        <button class="btn-main" data-bs-toggle="modal" data-bs-target="#createModal">
+                            <img width="20" src="../../../assets//plus-icon.svg" alt="">
+                            Create Custom Source
+                        </button>
+                    </div>
+                    <div class="custom-source-box">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="sourse-card">
+                                    <div class="s-card-hrader">
+                                        <div class="s-card-title">
+                                            <h6 class="m-0">Data Ingestion Hub</h6>
+                                        </div>
+                                        <div class="s-card-action">
+                                            <ul>
+                                                <li>
+                                                    <a href="#">
+                                                        <img width="16" src="../../../assets//edit-icon.svg">
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="#">
+                                                        <img width="16" src="../../../assets//delete-icon.svg">
+                                                    </a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="s-card-body">
+                                        <p>
+                                            Easily define and manage various data sources for your machine learning projects.
+                                        </p>
+                                        <div class="s-card-labels">
+                                            <ul>
+                                                <li>
+                                                    Database
+                                                </li>
+                                                <li>
+                                                    CSV
+                                                </li>
+                                                <li>
+                                                    Data
+                                                </li>
+                                                <li>
+                                                    +3
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="sourse-card">
+                                    <div class="s-card-hrader">
+                                        <div class="s-card-title">
+                                            <h6 class="m-0">Data Ingestion Hub</h6>
+                                        </div>
+                                        <div class="s-card-action">
+                                            <ul>
+                                                <li>
+                                                    <a href="#">
+                                                        <img width="16" src="../../../assets//edit-icon.svg">
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="#">
+                                                        <img width="16" src="../../../assets//delete-icon.svg">
+                                                    </a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="s-card-body">
+                                        <p>
+                                            Easily define and manage various data sources for your machine learning projects.
+                                        </p>
+                                        <div class="s-card-labels">
+                                            <ul>
+                                                <li>
+                                                    Database
+                                                </li>
+                                                <li>
+                                                    CSV
+                                                </li>
+                                                <li>
+                                                    Data
+                                                </li>
+                                                <li>
+                                                    +3
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="sourse-card">
+                                    <div class="s-card-hrader">
+                                        <div class="s-card-title">
+                                            <h6 class="m-0">Data Ingestion Hub</h6>
+                                        </div>
+                                        <div class="s-card-action">
+                                            <ul>
+                                                <li>
+                                                    <a href="#">
+                                                        <img width="16" src="../../../assets//edit-icon.svg">
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="#">
+                                                        <img width="16" src="../../../assets//delete-icon.svg">
+                                                    </a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="s-card-body">
+                                        <p>
+                                            Easily define and manage various data sources for your machine learning projects.
+                                        </p>
+                                        <div class="s-card-labels">
+                                            <ul>
+                                                <li>
+                                                    Database
+                                                </li>
+                                                <li>
+                                                    CSV
+                                                </li>
+                                                <li>
+                                                    Data
+                                                </li>
+                                                <li>
+                                                    +3
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="sourse-card">
+                                    <div class="s-card-hrader">
+                                        <div class="s-card-title">
+                                            <h6 class="m-0">Data Ingestion Hub</h6>
+                                        </div>
+                                        <div class="s-card-action">
+                                            <ul>
+                                                <li>
+                                                    <a href="#">
+                                                        <img width="16" src="../../../assets//edit-icon.svg">
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="#">
+                                                        <img width="16" src="../../../assets//delete-icon.svg">
+                                                    </a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="s-card-body">
+                                        <p>
+                                            Easily define and manage various data sources for your machine learning projects.
+                                        </p>
+                                        <div class="s-card-labels">
+                                            <ul>
+                                                <li>
+                                                    Database
+                                                </li>
+                                                <li>
+                                                    CSV
+                                                </li>
+                                                <li>
+                                                    Data
+                                                </li>
+                                                <li>
+                                                    +3
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
