--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,4 @@
-<footer>
-    <div class="footer-part">
+    <div class="footer-part h-100 w-100">
         <div class="container-fluid">
             <div class="row">
                 <div class="col">
@@ -11,4 +10,3 @@
             </div>
         </div>
     </div>
-</footer>
