--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -428,8 +428,8 @@ li{
     padding: 8px 0;
     box-shadow: 0 0 5px #c5c5c5;
     background: #fff;
-    position: absolute;
-    bottom: 0;
+    // position: absolute;
+    // bottom: 0;
     width: 100%;
     z-index: 2;
     p{
