--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,31 @@
-<app-button [class]="'primary justify-content-center mt-2'" [width]="'100%'">
-    Go </app-button>
-
+<div class="loginContainer h-100vh w-100vw d-flex justify-content-center align-items-center">
+    <div class="loginBox shadow-lg w-50vw">
+        <div class="w-100 h-100 p-5">
+            <div class="row gx-0 m-0 text-center mb-5 fz-1-5rem fw-bold">
+                <span>Login</span>
+            </div>
+            <div class="row gx-0 m-0 mb-3">
+                <input type="text">
+            </div>
+            <div class="row gx-0 m-0 mb-3">
+                <input type="text">
+            </div>
+            <div class="row gx-0 m-0 mb-5 fz-1rem">
+                <div class="col">
+                    Remeber me
+                </div>
+                <div class="col text-end">
+                    Forget Password ?
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <button class="btn btn-secondary w-200px">Sign Up</button>
+                </div>
+                <div class="col text-end">
+                    <button class="btn btn-primary  w-200px">Login</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
