working on some css

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -19,7 +19,7 @@
         </div>
 
         <!-- Template Cards -->
-        <div class="col-md-3" *ngFor="let template of templates">
+        <div class="col-md-3 projectsCard" *ngFor="let template of templates">
             <div class="card h-100">
                 <div class="card-body text-center">
                     <div class="mb-3" style="height: 150px; background-color: #f7f7f7;">
