--- a/src/app/pages/nodeconfiguration/nodeconfiguration.component.html
+++ b/src/app/pages/nodeconfiguration/nodeconfiguration.component.html
@@ -1,4 +1,4 @@
-<div class="body-wrap">
+<!-- <div class="body-wrap">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
@@ -264,6 +264,284 @@
                                         <a href="#" class="btn-view">VIEW</a>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> -->
+
+
+<div class="body-wrap">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="back-btn">
+                    <h6 class="fw-bold mb-0">Node Confiduration</h6>
+                </div>
+                <p>
+                    Paragraph text with style text M. Invidunt ut labore et dolore magna aliquy erat, sed diam voluptua. At vero eos et accusam et jus to duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="top-right-search">
+                    <div class="page-heading">
+                        Available Custom Sources
+                        <span>
+                            |
+                        </span>
+                    </div>
+                    <div class="search-bar">
+                        <input type="text" class="search-input">
+                        <button class="btn-search">
+                            <img width="20" src="images/search-icon.svg" alt="">
+                        </button>
+                    </div>
+                    <button class="btn-main" data-bs-toggle="modal" data-bs-target="#createModal">
+                        <img width="20" src="images/plus-icon.svg" alt="">
+                        Create New Pipeline
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="custom-source-box">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="pipe-card">
+                            <div class="pipe-card-hrader">
+                                <div class="pipe-card-title">
+                                    <h6 class="m-0">
+                                        <i class="far fa-file"></i>
+                                        Pipeline 1
+                                    </h6>
+                                    <div class="status-box bg-warning">
+                                        Offline
+                                    </div>
+                                </div>
+                                <div class="pipe-card-action">
+                                    <ul>
+                                        <li>
+                                            <a href="#">
+                                                <img width="16" src="images/edit-icon.svg">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img width="16" src="images/delete-icon.svg">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img width="16" src="images/option-icon.svg">
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="pipe-card-body">
+                                <table class="table">
+                                    <tr>
+                                        <td>
+                                            ID
+                                            <span>0001</span>
+                                        </td>
+                                        <td>
+                                            vCPU's
+                                            <span>24</span>
+                                        </td>
+                                        <td>
+                                            RAM
+                                            <span>96GB</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            GPU's
+                                            <span>0001</span>
+                                        </td>
+                                        <td>
+                                            SSD
+                                            <span>24</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            Status
+                                            <span>52%</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="3">
+                                            <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                                                <div class="progress-bar" style="width: 52%"></div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="pipe-card-footer">
+                                <a href="#" class="btn-view">VIEW</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="pipe-card">
+                            <div class="pipe-card-hrader">
+                                <div class="pipe-card-title">
+                                    <h6 class="m-0">
+                                        <i class="far fa-file"></i>
+                                        Pipeline 2
+                                    </h6>
+                                    <div class="status-box bg-success">
+                                        Completed
+                                    </div>
+                                </div>
+                                <div class="pipe-card-action">
+                                    <ul>
+                                        <li>
+                                            <a href="#">
+                                                <img width="16" src="images/edit-icon.svg">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img width="16" src="images/delete-icon.svg">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img width="16" src="images/option-icon.svg">
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="pipe-card-body">
+                                <table class="table">
+                                    <tr>
+                                        <td>
+                                            ID
+                                            <span>0001</span>
+                                        </td>
+                                        <td>
+                                            vCPU's
+                                            <span>24</span>
+                                        </td>
+                                        <td>
+                                            RAM
+                                            <span>96GB</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            GPU's
+                                            <span>0001</span>
+                                        </td>
+                                        <td>
+                                            SSD
+                                            <span>24</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            Status
+                                            <span>100%</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="3">
+                                            <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                                                <div class="progress-bar" style="width: 100%"></div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="pipe-card-footer">
+                                <a href="#" class="btn-view">VIEW</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="pipe-card">
+                            <div class="pipe-card-hrader">
+                                <div class="pipe-card-title">
+                                    <h6 class="m-0">
+                                        <i class="far fa-file"></i>
+                                        Pipeline 3
+                                    </h6>
+                                    <div class="status-box bg-secondary">
+                                        Not Started
+                                    </div>
+                                </div>
+                                <div class="pipe-card-action">
+                                    <ul>
+                                        <li>
+                                            <a href="#">
+                                                <img width="16" src="images/edit-icon.svg">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img width="16" src="images/delete-icon.svg">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img width="16" src="images/option-icon.svg">
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="pipe-card-body">
+                                <table class="table">
+                                    <tr>
+                                        <td>
+                                            ID
+                                            <span>0001</span>
+                                        </td>
+                                        <td>
+                                            vCPU's
+                                            <span>24</span>
+                                        </td>
+                                        <td>
+                                            RAM
+                                            <span>96GB</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            GPU's
+                                            <span>0001</span>
+                                        </td>
+                                        <td>
+                                            SSD
+                                            <span>24</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            Status
+                                            <span>0%</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="3">
+                                            <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                                                <div class="progress-bar" style="width: 2%"></div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="pipe-card-footer">
+                                <a href="#" class="btn-view">VIEW</a>
                             </div>
                         </div>
                     </div>
