--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -200,7 +200,7 @@ li{
     ul{
         display: flex;
         flex-direction: column;
-        gap: 1px;
+        // gap: 1px;
         li{
             a{
                 font-size: 16px;
